# CodexMap

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PITFALL_AUDIT.md  PRODUCTION_READINESS.md  PRODUCT_WRITEUP.md  README.md  RELEASE.md  SCORING.md  TROUBLESHOOTING.md  WEBSOCKET.md  config.js  deployment_guide.md  install.sh  orchestrator.js  package-lock.json  package.json  puppeteer-test.js  requirements.txt  serve.js  start.js  version.js
agents/: architect.js  broadcaster.js  cartographer.js  generator.js  healer.js  historian.js  sentinel.js
docs/: architecture.md  competitive-analysis-understand-anything.md  demo-script.md  evals.md  scoring.md  self-healing.md
engines/: codex.js  contract.js  fake.js  index.js
lib/: args.js  atomic.js  config-resolver.js  cost.js  doctor.js  ports.js  project-index.js  runtime.js  session.js  user-config.js
python-wrapper/: README.md  pyproject.toml
python-wrapper/src/codexmap/: __init__.py  cli.py
scripts/: apply_broadcaster_cost.js  apply_cartographer_fixes.js  apply_cartographer_fixes2.js  apply_csp.js  apply_graph_fixes.js  apply_orchestrator_fixes.js  apply_sentinel_fixes.js  apply_ui_fixes.js  apply_ui_fixes_2.js  apply_ws_cost.js  bridge_ping.js  check-js.js  clean.js  clean_session.js  cli-ux-test.sh  cross_encoder_score.py  cyclomatic.js  embed.js  embed.py  fake-engine-e2e.sh  fix_agents.js  fix_ui_ports.js  generate_pdf.js  integration-test.sh  package-contents-test.js  package-smoke-test.sh  pageindex_adapter.py  pageindex_build.py  pageindex_score.py  real-codex-smoke.sh  release-preflight.sh  (+3 more)
(+64 files in other folders)
