[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codexmap"
version = "0.1.0a1"
description = "pipx launcher for the CodexMap local drift intelligence canvas"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "@Somu.ai" }]
keywords = ["codex", "ai", "codegen", "drift", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: JavaScript",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Luciferai04/CodexMap"
Issues = "https://github.com/Luciferai04/CodexMap/issues"

[project.scripts]
codexmap = "codexmap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.codexmap]
npm_package = "codexmap"
npm_version = "0.1.0-alpha.1"
